
{{$NEXT}}

 - added bin/dmarc_lookup
 - replaced Regexp::Common IP validation with Net::IP (perl 5.8 compat)
 - added Results.pm tests
 - added full section numbers to Draft quotes

0.20130506 2013-05-06 America/Los_Angeles

 - added Result and Result/Evaluated.pm
 - consolidated DNS functions into DNS.pm
   - uses Regexp::Common, requiring perl 5.10.
 - Mail::DMARC::Policy is well defined and tested
 - setting up package